# akshay_cv_backend

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/: Akshay_Sayar_CV.json
